# obsidian-graph-analysis

./: .env.example  .env.local.example  .gitignore  CHANGELOG.md  README.md  manifest.json  package-lock.json  package.json  test-ai-model.js  test-prompts.md  tsconfig.json  versions.json
.github/workflows/: release.yml
docs/: BRIDGE_FOUNDATION_AUTHORITY_DISPLAY.md  color-and-stats.md  publishing.md  submit-to-obsidian.md  ui-refactoring-checklist.md
graph-analysis-wasm/: Cargo.toml
graph-analysis-wasm/src/: api.rs
scripts/: copy-to-vault.mjs  create-release.sh  esbuild.config.mjs
scripts/tests/: test-ai-model.mjs
scripts/utils/: load-env.mjs
src/: main.ts  styles.css
src/ai/: AISummaryManager.ts  DDCHelper.ts  MasterAnalysisManager.ts  VaultAnalysisManager.ts  VaultSemanticAnalysisManager.ts
src/ai/schemas/: domain-classification.schema.ts  knowledge-network.schema.ts  note-summary.schema.ts  vault-semantic-analysis.schema.ts
src/ai/visualization/: KnowledgeActionsManager.ts  KnowledgeEvolutionManager.ts  KnowledgeStructureManager.ts
src/components/: index.ts
src/components/calendar-chart/: KnowledgeCalendarChart.ts
src/components/connection-subgraph/: ConnectionSubGraph.ts
src/components/graph-view/: GraphView.ts
src/services/: AIContextPreparationService.ts  AIModelService.ts
src/settings/: GraphAnalysisSettingTab.ts
src/styles/: calendar-chart.css  domain-distribution.css  styles.css  theme.css
src/types/: types.ts
src/utils/: ExclusionUtils.ts  KDECalculationService.ts
src/views/: GraphAnalysisView.ts  VaultAnalysisModals.ts
(+4 files in other folders)
