[package]
name = "graph-analysis-wasm"
version = "0.1.0"
authors = ["wluo <urbanscientist-wluo@outlook.com>"]
edition = "2021"
description = "WASM module for graph analysis algorithms used in the Obsidian Graph Analysis plugin"
repository = "https://github.com/luolanaaTUD/obsidian-graph-analysis.git"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.108"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wee_alloc = { version = "0.4.5", optional = true }
regex = "1.11"
once_cell = "1.20"
rustworkx-core = "0.17"
getrandom = { version = "0.3", features = ["wasm_js"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# Patch transitive dependencies to fix future compatibility warnings
[patch.crates-io]
# Note: buf_redux and multipart are unmaintained, but updating dependencies
# may pull in newer versions or alternatives that don't use them

[dev-dependencies]
wasm-bindgen-test = "0.3.40"
approx = "0.5.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
